# life-saverc

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  compile_commands.json  configure  configure.ac  life-saverc.c  life-saverc.h  ssh-connection.c  ssh-connection.h
include/: verbose.h
packaging/RPM/: lifesaverc.spec
packaging/ZST/: PKGBUILD
src/: Makefile.am  Makefile.in  asprintf.c  asprintf.h  compression.c  compression.h  error-format.c  error-format.h  life-saverc.c  life-saverc.h  lifesaverc.c  lifesaverc.h  match-regex.c  ssh-connection.c  ssh-connection.h  verbose.c
src/include/: compression.h  lifesaverc.h  match-regex.h  ssh-connection.h
